[tool.poetry]
name = "fastapi-sqlmodel-alembic"
version = "0.1.0"
description = "practica sample backend app"
authors = ["andd <adanilyuk@btc-s.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.9.3"
asyncpg = "^0.27.0"
fastapi = "^0.90.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
